adds viewportWidth & viewportHeight support

--- a/cySettings.json
+++ b/cySettings.json
@@ -4,6 +4,8 @@
         "specPattern",
         "excludeSpecPattern",
         "awsSecretsManagerConfig",
-        "supportFile"
+        "supportFile",
+        "viewportWidth",
+        "viewportHeight"
     ]
 }
