feat: implement shared configurations with priority system
Add shared configurations support via _shared.json files with strict priority hierarchy (CLI > Environment JSON > Shared > Config).

Core changes:
- Refactor getLocalEnv() to support shared configurations loading
- Fix environment variables iteration bug
- Add CLI parameter protection (cannot be overridden)
- Improve configuration merging logic with destructuring

Documentation:
- Add comprehensive README section for shared configurations
- Document configuration priority order with examples
- Add Table of Contents for better navigation

Testing:
- Add _shared.json test configuration
- Add priority testing with multiple configuration sources
- Update test scripts to demonstrate priority system

--- a/cySettings.json
+++ b/cySettings.json
@@ -6,6 +6,7 @@
         "awsSecretsManagerConfig",
         "supportFile",
         "viewportWidth",
-        "viewportHeight"
+        "viewportHeight",
+        "shared"
     ]
 }
