fix: priority for cypress config
- Fixed config priority issue
- Improve  plugin cySetting support list
- Updated testing package.json to test Cypress^15.3.0
- Improved testing strategy to cover both env & config

--- a/cySettings.json
+++ b/cySettings.json
@@ -7,6 +7,50 @@
         "supportFile",
         "viewportWidth",
         "viewportHeight",
-        "shared"
+        "shared",
+        "fileServerFolder",
+        "fixturesFolder",
+        "clientCertificates",
+        "includeShadowDom",
+        "numTestsKeptInMemory",
+        "port",
+        "redirectionLimit",
+        "reporter",
+        "reporterOptions",
+        "retries",
+        "watchForFileChanges",
+        "defaultCommandTimeout",
+        "execTimeout",
+        "taskTimeout",
+        "pageLoadTimeout",
+        "requestTimeout",
+        "responseTimeout",
+        "downloadsFolder",
+        "screenshotsFolder",
+        "videosFolder",
+        "screenshotOnRunFailure",
+        "trashAssetsBeforeRuns",
+        "videoCompression",
+        "video",
+        "defaultBrowser",
+        "chromeWebSecurity",
+        "blockHosts",
+        "modifyObstructiveCode",
+        "userAgent",
+        "animationDistanceThreshold",
+        "waitForAnimations",
+        "scrollBehavior",
+        "setupNodeEvents",
+        "experimentalRunAllSpecs",
+        "slowTestThreshold",
+        "testIsolation",
+        "injectDocumentDomain",
+        "devServer",
+        "indexHtmlFile",
+        "justInTimeCompile",
+        "experimentalSingleTabRunMode",
+        "devServerPublicPathRoute",
+        "keystrokeDelay",
+        "isInteractive"
     ]
 }
